<?xml version="1.0"?>
<package format="2">
  <name>yolo_topic</name>
  <version>0.0.0</version>
  <description>The yolo_topic package</description>
  <maintainer email="jumbo@todo.todo">jumbo</maintainer>

  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>

  <export>
  </export>
</package>
